--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
         "check:usage": "node dist/cli/check-usage.js"
     },
     "dependencies": {
+        "chokidar": "^4.0.3",
+        "commander": "^14.0.0",
         "pug": "^3.0.2",
         "pug-lexer": "^5.0.1",
         "pug-parser": "^6.0.0",
         "ts-morph": "^20.0.0"
     },
     "devDependencies": {
+        "@types/commander": "^2.12.0",
         "@types/node": "^24.0.7",
         "tsx": "^4.20.3",
         "typescript": "^5.0.0"
