--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "chokidar": "^4.0.3",
         "commander": "^14.0.0",
+        "glob": "^11.0.3",
         "pug": "^3.0.2",
         "pug-lexer": "^5.0.1",
         "pug-parser": "^6.0.0",
