--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "chokidar": "^4.0.3",
         "commander": "^14.0.0",
+        "glob": "^11.0.3",
         "pug": "^3.0.2",
         "pug-lexer": "^5.0.1",
         "pug-parser": "^6.0.0",
@@ -21,6 +22,7 @@
     },
     "devDependencies": {
         "@types/commander": "^2.12.0",
+        "@types/glob": "^8.1.0",
         "@types/node": "^24.0.7",
         "tsx": "^4.20.3",
         "typescript": "^5.0.0"
