update: another big update

--- a/pug.tsconfig.json
+++ b/pug.tsconfig.json
@@ -1,6 +1,6 @@
 {
   "tmpDir": ".tmp",
-  "projectPath": "./",
-  "pugPaths": ["./src/views", "./tests/pugs"],
+  "projectPath": "./tests/example-test-project",
+  "pugPaths": ["./tests/example-test-project/pug"],
   "logLevel": "info"
 }
