--- a/pug.tsconfig.json
+++ b/pug.tsconfig.json
@@ -2,5 +2,6 @@
   "tmpDir": ".tmp",
   "projectPath": "./tests/example-test-project",
   "pugPaths": ["./tests/example-test-project/pug"],
-  "logLevel": "info"
+  "logLevel": "info",
+  "viewsRoot": "./views" 
 }
