refactor(config): adjust paths for string-portrait project and improve watcher integration
- updated pug.tsconfig.json to point to new src/views structure
- removed old pug.tsconfig.test.json
- improved CLI scanning to refresh ts-morph project and dependency graph more reliably
- refined error logging in logDiagnostics for missing source files
- changed ContractParser to allow toggling type-check
- improved scanFile to re-add watched imports automatically
- simplified LineMap logging and removed verbose debug lines
- added extractNames utility to parse destructure variables from expect block
- adjusted validateGeneratedTs to handle undefined parse errors more gracefully

--- a/pug.tsconfig.json
+++ b/pug.tsconfig.json
@@ -1,7 +1,7 @@
 {
-  "tmpDir": ".tmp",
-  "projectPath": "./tests/example-test-project",
-  "pugPaths": ["./tests/example-test-project/pug"],
+  "tmpDir": "./src/.tmp",
+  "projectPath": "../../srv/apps/string-portrait/code/",
+  "pugPaths": ["./src/views"],
   "logLevel": "info",
-  "viewsRoot": "./views" 
+  "viewsRoot": "./src/views" 
 }
