--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "pug-ts-check",
-    "version": "0.1.0",
+    "version": "0.1.4",
     "description": "Static TypeScript checker for Pug templates",
     "type": "module",
     "license": "MIT",
@@ -31,6 +31,7 @@
     "main": "./dist/cli/index.js",
     "files": [
         "dist/",
+        "patches/",
         "README.md",
         "LICENSE"
     ],
@@ -48,13 +49,13 @@
         "pug-lexer": "^5.0.1",
         "pug-parser": "^6.0.0",
         "ts-morph": "^20.0.0",
+        "typescript": "^5.8.3",
         "zod": "^3.25.76"
     },
     "devDependencies": {
         "@types/commander": "^2.12.0",
         "@types/glob": "^8.1.0",
         "@types/node": "^24.0.7",
-        "tsx": "^4.20.3",
-        "typescript": "^5.8.3"
+        "tsx": "^4.20.3"
     }
 }
